tests/spec/errors/type_mismatch.fable
//? error: type mismatch
let x: Int = "hello";
